# twitchsoundtrack-obs-plugin

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  CMakeSettings.json  NOTICE  README.md
cmakeUtils/: conanutils.cmake
conan/: conanfile.py
conan/package/: build.bat  conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
soundtrack/: CMakeLists.txt
soundtrack/include/: LockFreeList.h  OBSCallback.h  SoundtrackPluginData.h  Util.h
soundtrack/src/: SoundtrackPlugin.cpp  SoundtrackSource.cpp
